# pk-algs

./: CMakeLists.txt  LICENSE  README.md  alg_plots.ipynb  ar.cpp  ar.h  bb.cpp  bb.h  brute_force.cpp  brute_force.h  common.cpp  common.h  conanfile.txt  dac.h  dc.cpp  dc.h  main.cpp  matrix.cpp  matrix.h  plots_clean.ipynb  run.py  run.sh  stats.csv  test_ranges.cpp
results/: d155-random-100-o1.5.csv  neotrop-100-o1.5.csv  neotrop-bbe.csv  neotrop-o1-bbe.csv  random-100-o1.5.csv  stats.csv
